tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_errors@invalid_math_op.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/invalid_math_op.txt
---
error: `+` requires both operands to be numbers, found `undefined` and `i64`
 --> invalid_math_op.txt:1:4
  |
1 | {{ username + 1 }}
  |    ^^^^^^^^^^^^
